Add html for displaying a list of shelters with pending applications for their pets

--- a/app/views/admin_shelters/index.html.erb
+++ b/app/views/admin_shelters/index.html.erb
@@ -3,3 +3,12 @@
     <li><%= shelter.name %></li>
   <% end %>
 </ul>
+
+<div class = "pendingshelters">
+<p>Shelters with Pending Applications:</p>
+  <ul>
+  <% @pending_shelters.each do |shelter| %>
+    <li><%= shelter.name %></li>
+  <% end %>
+  </ul>
+<div>
