Remove duplicate code from new application show view to display flash

--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -1,12 +1,4 @@
-
-  <% if flash[:messages] %>
-  <% flash[:messages].each do |message| %>
-  <h2><%= message%></h2> <br>
-  <% end %>
-  <% end %>
-
-
-<h1> Please fill out every field </h1>
+<h1> New Application </h1>
 
 <%= form_with url: "/applications/#{@new_app.id}", method: :post, local: :true do |form| %>
   <%= form.label :name, "Name" %>
